--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,23 @@ langchain-core
 markdown==3.5.1
 numpy==1.26.2
 pandas==2.1.3
+
+# Phase 1 Database
+sqlalchemy>=2.0.29
+alembic>=1.13.1
+
+# Phase 2: Real Tool Integrations (optional - install as needed)
+# stripe>=5.4.0  # Payment processing
+# sendgrid>=6.10.0  # Email service
+# slack-sdk>=3.23.0  # Slack integration
+# twilio>=8.10.0  # SMS and voice
+
+# Phase 2: Vector DB
+chromadb>=0.4.17
+sentence-transformers>=2.2.2
+# Phase 3: Enterprise Features
+# All Phase 3 features are built-in with no external dependencies required:
+# - Agent collaboration (consensus algorithms)
+# - Dynamic agent factory (runtime agent creation)
+# - Advanced analytics (satisfaction, churn prediction, ROI)
+# - Real-time streaming (SSE, WebSocket ready)
